--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -25,7 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(path: ':library')
-    compile 'com.android.support:appcompat-v7:26+'
-    compile 'com.android.support:recyclerview-v7:26+'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
     testCompile 'junit:junit:4.12'
 }
