--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.pomGroupId = 'com.tuuzed.androidx.recyclerview-adapter'
-    ext.pomVersion = '2.1.0'
+    ext.pomGroupId = 'com.tuuzed.androidx.recyclerview'
+    ext.pomVersion = '2.1.1-rc1'
+
     ext.kotlin_version = '1.3.21'
     repositories {
         maven { url 'https://maven.aliyun.com/repository/google' }
@@ -14,8 +15,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.novoda:bintray-release:0.9'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
