--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.library'
 
-
-
 android {
 
     compileSdkVersion 28
@@ -10,7 +8,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0.0"
+        versionName pomVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -40,7 +38,7 @@ dependencies {
 
 ext.pom = [
         "groupId"   : pomGroupId,
-        "artifactId": 'core',
+        "artifactId": 'adapter-core',
         "version"   : pomVersion,
 ]
 
