--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.pomGroupId = 'com.tuuzed.androidx.recyclerview'
-    ext.pomVersion = '2.1.1-rc1'
+    ext.pomGroupId = 'com.tuuzed.androidx'
+    ext.pomVersion = '1.0.0-rc2'
 
     ext.kotlin_version = '1.3.21'
     repositories {
