--- a/prefs/build.gradle
+++ b/prefs/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
+
+group = rootProject.group
+version = rootProject.version
+
 android {
     compileSdkVersion 28
 
@@ -9,7 +13,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
-        versionName pomVersion
+        versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -42,11 +46,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
 
-ext.pom = [
-        "groupId"   : pomGroupId,
-        "artifactId": 'recyclerview-adapter-prefs',
-        "version"   : pomVersion,
-]
 
-apply from: '../gradle/maven-deployer.gradle'
-apply from: '../gradle/bintray-release.gradle'
+apply from: './publish.gradle'
