--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/maven/
-bintray.properties
-
 *.iml
 .gradle
 /local.properties
@@ -156,3 +153,5 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+### Custom
+.repo/
