--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.pomGroupId = 'com.tuuzed.androidx'
-    ext.pomVersion = '1.0.0-rc2'
-
     ext.kotlin_version = '1.3.21'
     repositories {
         maven { url 'https://maven.aliyun.com/repository/google' }
@@ -26,6 +21,9 @@ allprojects {
         jcenter()
     }
 }
+
+group = 'com.tuuzed.androidx'
+version = '1.0.0-rc2'
 
 task clean(type: Delete) {
     delete rootProject.buildDir
