--- a/prefs/build.gradle
+++ b/prefs/build.gradle
@@ -31,10 +31,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
     implementation 'com.google.android.material:material:1.1.0-alpha04'
-    implementation 'com.afollestad.material-dialogs:core:2.0.0-rc9'
-    implementation 'com.afollestad.material-dialogs:input:2.0.0-rc9'
+    implementation 'com.afollestad.material-dialogs:core:2.5.0'
+    implementation 'com.afollestad.material-dialogs:input:2.5.0'
     api project(":core")
     api project(":kotlin")
 
