--- a/adapter/build.gradle
+++ b/adapter/build.gradle
@@ -6,12 +6,10 @@ group = rootProject.group
 version = rootProject.version
 
 android {
-
-    compileSdkVersion 28
-
+    compileSdkVersion compileSdk
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 28
+        minSdkVersion minSdk
+        targetSdkVersion targetSdk
         versionCode 1
         versionName version
 
