--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
+    ext.compileSdk = 28
+    ext.minSdk = 16
+    ext.targetSdk = 28
     repositories {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
@@ -22,8 +25,8 @@ allprojects {
     }
 }
 
-group = 'com.tuuzed.androidx'
-version = '1.0.0-rc10'
+group = 'com.tuuzed.androidx.recyclerview'
+version = '1.0.1-rc01'
 
 task clean(type: Delete) {
     delete rootProject.buildDir
