--- a/publish.gradle
+++ b/publish.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.novoda.bintray-release'
 
 def pomMetadata = [
         'groupId'   : project.group ?: rootProject.group,
-        'artifactId': "recyclerview-adapter-${project.name}",
+        'artifactId': project.name,
         'version'   : project.version ?: rootProject.version,
         'desc'      : "recyclerview-adapter-${project.name}",
         'website'   : 'https://github.com/tuuzed/recyclerview-adapter'
@@ -39,7 +39,7 @@ publish {
     bintrayUser = System.getenv('BINTRAY_USER')
     bintrayKey = System.getenv('BINTRAY_API_KEY')
     userOrg = 'tuuzed'
-    repoName = 'maven'
+    repoName = 'recyclerview'
     dryRun = false
     override = true
     groupId = pomMetadata.groupId
