--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion compileSdk
     defaultConfig {
         applicationId "com.tuuzed.androidx.recyclerview.adapter.sample"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion minSdk
+        targetSdkVersion targetSdk
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -25,10 +25,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
 
-    implementation project(":core")
+    implementation project(':adapter')
     implementation project(":loadmore")
+    implementation project(":pageable")
     implementation project(":prefs")
 
     // 单元测试
