--- a/publish.gradle
+++ b/publish.gradle
@@ -1,24 +1,60 @@
-apply plugin: 'maven'
-apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
 
-def pomMetadata = [
-        'groupId'   : project.group ?: rootProject.group,
-        'artifactId': project.name,
-        'version'   : project.version ?: rootProject.version,
-        'desc'      : "recyclerview-adapter-${project.name}",
-        'website'   : 'https://github.com/tuuzed/recyclerview-adapter'
-]
 
-/**
- * maven plugin
- */
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            pom.groupId = pomMetadata.groupId
-            pom.artifactId = pomMetadata.artifactId
-            pom.version = pomMetadata.version
-            repository(url: "file:///" + rootProject.file(".repo").absolutePath)
+group = project.group ?: rootProject.group
+version = project.version ?: rootProject.version
+
+def siteUrl = "https://github.com/tuuzed/recyclerview-adapter"
+def gitUrl = "https://github.com/tuuzed/recyclerview-adapter.git"
+def issueUrl = "https://github.com/tuuzed/recyclerview-adapter/issues"
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_API_KEY')
+
+    configurations = ['archives'] //When uploading configuration files
+    pkg {
+        repo = 'recyclerview'
+        name = 'com.tuuzed.androidx.recyclerview:' + project.name
+        desc = 'Recyclerview adapter'
+        websiteUrl = siteUrl
+        issueTrackerUrl = issueUrl
+        vcsUrl = gitUrl
+        licenses = ['Apache-2.0']
+        labels = ['aar', 'android']
+        publicDownloadNumbers = true
+        publish = true
+    }
+}
+
+install {
+    repositories.mavenInstaller {
+        pom {
+            project {
+                packaging 'aar'
+                name group + ':' + project.name
+                url siteUrl
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'TuuZed'
+                        name 'TuuZed'
+                        email 'liuyonghui.job@gmail.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+
+                }
+            }
         }
     }
 }
@@ -28,23 +64,17 @@ task sourcesJar(type: Jar) {
     classifier = 'sources'
 }
 
-artifacts {
-    archives sourcesJar
-}
+// task javadoc(type: Javadoc) {
+//     source = android.sourceSets.main.java.srcDirs
+//     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+// }
+//
+// task javadocJar(type: Jar, dependsOn: javadoc) {
+//     classifier = 'javadoc'
+//     from javadoc.destinationDir
+// }
 
-/**
- * bintray-release plugin
- */
-publish {
-    bintrayUser = System.getenv('BINTRAY_USER')
-    bintrayKey = System.getenv('BINTRAY_API_KEY')
-    userOrg = 'tuuzed'
-    repoName = 'recyclerview'
-    dryRun = false
-    override = true
-    groupId = pomMetadata.groupId
-    artifactId = pomMetadata.artifactId
-    publishVersion = pomMetadata.version
-    desc = pomMetadata.desc
-    website = pomMetadata.website
+artifacts {
+    // archives javadocJar
+    archives sourcesJar
 }
