--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.novoda:bintray-release:0.9'
+        // classpath 'com.novoda:bintray-release:0.9'
+
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
@@ -26,7 +29,7 @@ allprojects {
 }
 
 group = 'com.tuuzed.androidx.recyclerview'
-version = '1.0.1-rc01'
+version = '1.0.1-rc02'
 
 task clean(type: Delete) {
     delete rootProject.buildDir
