--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ allprojects {
 }
 
 group = 'com.tuuzed.androidx.recyclerview'
-version = '1.0.1-rc03'
+version = '1.0.2'
 
 task clean(type: Delete) {
     delete rootProject.buildDir
