--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // classpath 'com.novoda:bintray-release:0.9'
+        classpath 'com.novoda:bintray-release:0.9'
 
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
@@ -28,8 +28,8 @@ allprojects {
     }
 }
 
-group = 'com.tuuzed.androidx.recyclerview'
-version = '1.0.2'
+group = 'com.tuuzed.recyclerview'
+version = '2.0.0'
 
 task clean(type: Delete) {
     delete rootProject.buildDir
