--- a/pageable/src/main/AndroidManifest.xml
+++ b/pageable/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tuuzed.androidx.recyclerview.adapter.pageable" />
+    package="com.tuuzed.recyclerview.adapter.pageable" />
