--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.tuuzed.androidx.recyclerview.adapter.sample">
+    package="com.tuuzed.recyclerview.adapter.sample">
 
     <application
         android:allowBackup="true"
