--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.novoda:bintray-release:0.9.1'
 
@@ -30,7 +30,7 @@ allprojects {
 }
 
 group = 'com.tuuzed.recyclerview'
-version = '2.1.0-alpha02'
+version = '2.1.1'
 
 task clean(type: Delete) {
     delete rootProject.buildDir
