--- a/adapter-ktx/build.gradle
+++ b/adapter-ktx/build.gradle
@@ -1,6 +1,5 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'gitvc-gradle-plugin'
 
 group = rootProject.group
@@ -9,38 +8,32 @@ version = rootProject.version
 android {
     compileSdkVersion targetSdk
     defaultConfig {
-        applicationId "com.tuuzed.androidx.listsample"
         minSdkVersion minSdk
         targetSdkVersion targetSdk
         versionCode GitVC.VERSION_CODE
         versionName version
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    // module
-    implementation project(":adapter")
-    implementation project(":adapter-ktx")
-    implementation project(":loadmore")
-    implementation project(":loadmore-ktx")
-    implementation project(":pageable")
-    implementation project(":preference")
-    implementation project(":preference-ktx")
+    api project(":adapter")
     implementation deps.kotlin
-    implementation deps.appcompat
-    implementation deps.constraintlayout
-    implementation deps.core_ktx
-    implementation deps.material
-    // unit test
+    implementation deps.recyclerview
+
     testImplementation deps.junit
     androidTestImplementation deps.runner
     androidTestImplementation deps.espresso_core
 }
+
+apply from: '../publish.gradle'
