--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 
     ext.minSdk = 14
     ext.targetSdk = 28
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.41'
     ext.deps = [
             'appcompat'       : 'androidx.appcompat:appcompat:1.1.0-alpha05',
             'annotation'      : 'androidx.annotation:annotation:1.1.0-rc01',
@@ -28,7 +28,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         //
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
@@ -61,5 +61,5 @@ allprojects {
 
 
 group = 'com.tuuzed.androidx.list'
-version = '3.0.0-rc01'
+version = '3.0.1'
 
